# FHEtool

./: README.md  fhe_api.py  fhe_start.py
SEAL/dotnet/: SEALNet.sln
SEAL/native/forserve/: CMakeLists.txt  bfv_mul_v2.cpp  bgv_mul_v2.cpp  bgv_serve.cpp  ckks_business.cpp  ckks_mul.cpp  ckks_mul_v2.cpp  cnn_gradients.csv  examples.cpp  examples.h  mybfv.cpp  myckks.cpp
SEAL/native/forserve/data/: dataread  dataread.cpp  dataread.h
SEAL/native/mytest/: .myckks.cpp.swp  CMakeLists.txt  bfv_mul.cpp  bfv_serve.cpp  bgv_business.cpp  bgv_mul.cpp  bgv_serve.cpp  ckks_serve.cpp  examples.cpp  examples.h  mybgv.cpp
TenSEAL-main/: Tutorial 3 - Benchmarks.ipynb
TenSEAL-main/mytest/apitest/: main.py
TenSEAL-main/mytest/datatest/: bfv_business.py  bfv_mul.py  ckks_cnn.py  ckks_data_test.py  ckks_mul.ipynb  ckks_mul.py  ckks_sealapi_cnn.py  gradients.csv  test.py  test2.py
TenSEAL-main/mytest/datatest/serve/: bfv_serve.py  ckks_serve.py
TenSEAL-main/tenseal/cpp/context/: sealcontext.cpp
TenSEAL-main/tenseal/cpp/tensors/: ckkstensor.cpp  ckksvector.cpp  encrypted_tensor.h  encrypted_vector.h
TenSEAL-main/tests/cpp/tensors/: ckkstensor_test.cpp  ckksvector_test.cpp
TenSEAL-main/tests/python/tenseal/: test.py  test_enc_dec.py
TenSEAL-main/tests/python/tenseal/tensors/: mytest.py  test_ckks_vector.py
TenSEAL-main/tutorials/: Tutorial 0 - Getting Started.ipynb  Tutorial 2 - Working with Approximate Numbers.ipynb  Tutorial 3 - Benchmarks.ipynb
openfhe-development/src/pke/examples/: advanced-ckks-bootstrapping.cpp  advanced-real-numbers.cpp  simple-ckks-bootstrapping.cpp  simple-integers-bgvrns.cpp  simple-integers.cpp  simple-real-numbers.cpp
server/: fhe_api.py
